feat: update frontend model options with latest OpenAI models and pricing

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -546,19 +546,24 @@
                         "qwen-72b": "Qwen 2.5 72B - Free, 131K context (qwen/qwen2.5-vl-72b-instruct:free)"
                     },
                     "Budget Models": {
+                        "gpt-4o-mini": "GPT-4 Mini - Very fast ($0.15/1M) (openai/gpt-4o-mini)",
                         "nova-lite": "Nova Lite - Fast ($0.06/M) (amazon/nova-lite-v1)",
                         "gemini-flash": "Gemini Flash 1.5 8B - Quick ($0.037/M) (google/gemini-flash-1.5-8b)",
                         "mixtral": "Mixtral 8x7B - Open source ($0.1/M) (mistralai/mixtral-8x7b-instruct)"
                     },
                     "Standard Models": {
+                        "gpt-4o": "GPT-4 Optimized - Fast ($2.5/1M) (openai/gpt-4o)",
+                        "chatgpt-4o": "ChatGPT-4 Latest - Strong ($5/1M) (openai/chatgpt-4o-latest)",
+                        "gpt-4o-extended": "GPT-4 Extended - Long context ($6/1M) (openai/gpt-4o:extended)",
                         "claude-3-haiku": "Claude 3 Haiku - Fast ($0.25/M) (anthropic/claude-3-haiku)",
                         "nova-pro": "Nova Pro - Balanced ($0.8/M) (amazon/nova-pro-v1)",
                         "gemini-pro": "Gemini Pro 1.5 - Strong ($1.25/M) (google/gemini-pro-1.5)"
                     },
                     "Premium Models": {
-                        "claude-3-sonnet": "Claude 3.5 Sonnet - Balanced ($3/M) (anthropic/claude-3.5-sonnet)",
-                        "gpt-4o": "GPT-4 Optimized - Reliable ($2.5/M) (openai/gpt-4o)",
-                        "claude-3-opus": "Claude 3.5 Opus - Most capable ($15/M) (anthropic/claude-3.5-opus)",
+                        "gpt-4-turbo": "GPT-4 Turbo - Latest ($10/1M) (openai/gpt-4-turbo)",
+                        "o1": "O1 - Most capable ($15/1M) (openai/o1)",
+                        "claude-3-sonnet": "Claude 3.5 Sonnet - Balanced ($3/M) (anthropic/claude-3-sonnet)",
+                        "claude-3-opus": "Claude 3.5 Opus - Most capable ($15/M) (anthropic/claude-3-opus)",
                         "auto": "Auto - Best available model (openrouter/auto)"
                     }
                 };
