--- a/app/static/index.html
+++ b/app/static/index.html
@@ -529,12 +529,16 @@
                 // Update model options based on tab
                 const modelSelect = document.getElementById('model');
                 const visionModels = {
-                    "Vision Models": {
+                    "Free Models": {
                         "gemini-2-flash-lite": "Gemini 2.0 Flash Lite - Free, fast (google/gemini-2.0-flash-lite-preview-02-05:free)",
                         "qwen-vl-plus": "Qwen VL Plus - Free, reliable (qwen/qwen-vl-plus:free)",
-                        "llama-3-vision": "Llama 3.2 11B Vision - Free (meta-llama/llama-3.2-11b-vision-instruct:free)",
+                        "llama-3-vision": "Llama 3.2 11B Vision - Free (meta-llama/llama-3.2-11b-vision-instruct:free)"
+                    },
+                    "Standard Models": {
                         "gemini-2-flash": "Gemini 2.0 Flash - Fast ($0.1/M) (google/gemini-2.0-flash-001)",
-                        "gemini-pro-vision": "Gemini Pro Vision - Balanced ($0.5/M) (google/gemini-pro-vision)",
+                        "gemini-pro-vision": "Gemini Pro Vision - Balanced ($0.5/M) (google/gemini-pro-vision)"
+                    },
+                    "Premium Models": {
                         "gpt-4-vision": "GPT-4 Vision - Best quality ($15/M) (openai/gpt-4-vision-preview)",
                         "auto": "Auto - Best available model (openrouter/auto)"
                     }
@@ -548,12 +552,15 @@
                     },
                     "Budget Models": {
                         "gpt-4o-mini": "GPT-4 Mini - Very fast ($0.15/1M) (openai/gpt-4o-mini)",
+                        "gpt-4o-mini-dated": "GPT-4 Mini Dated - Very fast ($0.15/1M) (openai/gpt-4o-mini-2024-07-18)",
                         "nova-lite": "Nova Lite - Fast ($0.06/M) (amazon/nova-lite-v1)",
                         "gemini-flash": "Gemini Flash 1.5 8B - Quick ($0.037/M) (google/gemini-flash-1.5-8b)",
                         "mixtral": "Mixtral 8x7B - Open source ($0.1/M) (mistralai/mixtral-8x7b-instruct)"
                     },
                     "Standard Models": {
                         "gpt-4o": "GPT-4 Optimized - Fast ($2.5/1M) (openai/gpt-4o)",
+                        "gpt-4o-dated": "GPT-4 Optimized Dated - Fast ($2.5/1M) (openai/gpt-4o-2024-11-20)",
+                        "gpt-4o-old": "GPT-4 Optimized Old - Strong ($5/1M) (openai/gpt-4o-2024-05-13)",
                         "chatgpt-4o": "ChatGPT-4 Latest - Strong ($5/1M) (openai/chatgpt-4o-latest)",
                         "gpt-4o-extended": "GPT-4 Extended - Long context ($6/1M) (openai/gpt-4o:extended)",
                         "claude-3-haiku": "Claude 3 Haiku - Fast ($0.25/M) (anthropic/claude-3-haiku)",
