--- a/app/static/index.html
+++ b/app/static/index.html
@@ -394,8 +394,8 @@
                 <path d="M12 3a9 9 0 1 0 9 9c0-.46-.04-.92-.1-1.36a5.389 5.389 0 0 1-4.4 2.26 5.403 5.403 0 0 1-3.14-9.8c-.44-.06-.9-.1-1.36-.1z"/>
             </svg>
         </button>
-        <div style="display: flex; align-items: center; gap: 1rem;">
-            <svg width="32" height="32" viewBox="0 0 32 32">
+        <div style="display: flex; align-items: center; gap: 1rem; margin-bottom: 2rem;">
+            <svg width="48" height="48" viewBox="0 0 32 32" style="flex-shrink: 0;">
                 <circle cx="16" cy="16" r="14" fill="#3b82f6"/>
                 <path d="M16 6c-2 0-4 1-5 2.5-.5.8-.8 1.7-1 2.5-.2.8-.2 1.5 0 2 .2.5.5.8 1 1 .5.2 1 0 1.5-.2.5-.2 1-.5 1.5-1 .5-.5 1-1 1.5-1.5.5-.5 1-.8 1.5-1 .5-.2 1-.2 1.5 0 .5.2.8.5 1 1 .2.5.2 1 0 1.5-.2.5-.5 1-1 1.5-.5.5-1 1-1.5 1.5" 
                     fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -403,7 +403,7 @@
                     fill="white" stroke="white" stroke-width="0.5"/>
                 <path d="M12 22h8M12 19h8" stroke="white" stroke-width="1.5" stroke-linecap="round"/>
             </svg>
-            <h1>Tour Date Drake</h1>
+            <h1 style="margin: 0;">Tour Date Drake</h1>
         </div>
         
         <div class="tabs">
