--- a/app/static/index.html
+++ b/app/static/index.html
@@ -397,11 +397,12 @@
         <div style="display: flex; align-items: center; gap: 1rem; margin-bottom: 2rem;">
             <svg width="48" height="48" viewBox="0 0 32 32" style="flex-shrink: 0;">
                 <circle cx="16" cy="16" r="14" fill="#3b82f6"/>
-                <path d="M16 6c-2 0-4 1-5 2.5-.5.8-.8 1.7-1 2.5-.2.8-.2 1.5 0 2 .2.5.5.8 1 1 .5.2 1 0 1.5-.2.5-.2 1-.5 1.5-1 .5-.5 1-1 1.5-1.5.5-.5 1-.8 1.5-1 .5-.2 1-.2 1.5 0 .5.2.8.5 1 1 .2.5.2 1 0 1.5-.2.5-.5 1-1 1.5-.5.5-1 1-1.5 1.5" 
-                    fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M20 10v6.5c0 1.1-.9 2-2 2h-1c-1.1 0-2-.9-2-2s.9-2 2-2h1V10l2-1" 
-                    fill="white" stroke="white" stroke-width="0.5"/>
-                <path d="M12 22h8M12 19h8" stroke="white" stroke-width="1.5" stroke-linecap="round"/>
+                <path d="M12 10c0 0 2-2 4-2s4 2 4 2c1 1 2 2 2 3s-1 2-2 2c-1 0-2-1-3-2c-1-1-2-1-2-1s-1 0-2 1c-1 1-2 2-3 2c-1 0-2-1-2-2s1-2 2-3c0 0 2-2 4-2" 
+                    fill="#3b82f6" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                <circle cx="14" cy="11" r="1" fill="white"/>
+                <path d="M20 8v8.5c0 1.1-.9 2-2 2h-1c-1.1 0-2-.9-2-2s.9-2 2-2h1V8l2-1" 
+                    fill="white" stroke="white" stroke-width="1"/>
+                <path d="M10 22h12M10 19h12" stroke="white" stroke-width="2" stroke-linecap="round"/>
             </svg>
             <h1 style="margin: 0;">Tour Date Drake</h1>
         </div>
