--- a/app/static/index.html
+++ b/app/static/index.html
@@ -397,7 +397,7 @@
         <div style="display: flex; align-items: center; gap: 1rem; margin-bottom: 2rem;">
             <svg width="48" height="48" viewBox="0 0 32 32" style="flex-shrink: 0;">
                 <circle cx="16" cy="16" r="14" fill="#3b82f6"/>
-                <path d="M11 8.5c-.5.5-1 1.2-1.3 2-.3.8-.2 1.5 0 2 .3.5.8.8 1.3 1 .5.2 1.2 0 1.7-.3.5-.3 1-.7 1.3-1.2.3-.5.7-1 1-1.2.3-.2.7-.3 1-.2.3.1.5.3.6.6.1.3 0 .7-.2 1-.2.3-.5.7-1 1-.5.3-1 .7-1.4.8-.4.1-.8 0-1-.3M19 8.5c-.3-.3-.7-.4-1-.3-.3.1-.6.4-.8.8-.2.4-.3.9-.3 1.3 0 .4.2.7.5.9.3.2.7.2 1 0 .3-.2.6-.5.8-.9.2-.4.3-.8.3-1.2 0-.2-.2-.4-.5-.6-.6z" 
+                <path d="M11 8.5c-.5.5-1 1.2-1.3 2-.3.8-.2 1.5 0 2 .3.5.8.8 1.3 1 .5.2 1.2 0 1.7-.3.5-.3 1-.7 1.3-1.2.3-.5.7-1 1-1.2.3-.2.7-.3 1-.2.3.1.5.3.6.6.1.3 0 .7-.2 1-.2.3-.5.7-1 1-.5.3-1 .7-1.4.8-.4.1-.8 0-1-.3M19 8.5c-.3-.3-.7-.4-1-.3-.3.1-.6.4-.8.8-.2.4-.3.9-.3 1.3 0 .4.2.7.5.9.3.2.7.2 1 0 .3-.2.6-.5.8-.9.2-.4.3-.8.3-1.2 0-.2-.2-.4-.5-.6-.6-.6z" 
                     fill="white" stroke="white" stroke-width="0.5"/>
                 <path d="M20 8v8.5c0 1.1-.9 2-2 2h-1c-1.1 0-2-.9-2-2s.9-2 2-2h1V8l2-1" 
                     fill="white" stroke="white" stroke-width="1"/>
