Initial commit: Better Lover - Tour Date Formatter

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tour Date Drake</title>
+    <title>Better Lover</title>
     <link rel="icon" type="image/svg+xml" href="/static/favicon.svg">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
@@ -403,7 +403,7 @@
                     fill="white" stroke="white" stroke-width="1"/>
                 <path d="M10 22h12M10 19h12" stroke="white" stroke-width="2" stroke-linecap="round"/>
             </svg>
-            <h1 style="margin: 0;">Tour Date Drake</h1>
+            <h1 style="margin: 0;">Better Lover</h1>
         </div>
         
         <div class="tabs">
@@ -462,9 +462,9 @@
         </div>
 
         <div class="info-box" style="margin-bottom: 1.5rem; padding: 1rem; background: var(--info-bg); border: 1px solid var(--info-border); border-radius: 6px;">
-            <h3 style="margin-bottom: 0.5rem; color: var(--info-heading);">About Tour Date Drake</h3>
+            <h3 style="margin-bottom: 0.5rem; color: var(--info-heading);">About Better Lover</h3>
             <p style="color: var(--info-text);">
-                Tour Date Drake helps format tour dates consistently. For images, it will:
+                Better Lover helps format tour dates consistently. For images, it will:
                 <ul style="margin-top: 0.5rem; margin-left: 1.5rem;">
                     <li>Extract tour/festival names</li>
                     <li>List all bands involved</li>
