Update prompts for AI model to handle date formatting directly

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -452,9 +452,8 @@
                     <option value="gemini-pro">Gemini Pro 1.5 - Strong ($1.25/M) (google/gemini-pro-1.5)</option>
                 </optgroup>
                 <optgroup label="Premium Models">
-                    <option value="claude-3-sonnet">Claude 3.5 Sonnet - Balanced ($3/M) (anthropic/claude-3.5-sonnet)</option>
+                    <option value="claude-3-sonnet">Claude 3.5 Sonnet - Balanced ($3/M) (anthropic/claude-3-sonnet)</option>
                     <option value="gpt-4o">GPT-4 Optimized - Reliable ($2.5/M) (openai/gpt-4o)</option>
-                    <option value="claude-3-opus">Claude 3.5 Opus - Most capable ($15/M) (anthropic/claude-3.5-opus)</option>
                     <option value="auto">Auto - Best available model (openrouter/auto)</option>
                 </optgroup>
             </select>
@@ -581,7 +580,6 @@
                         "gpt-4-turbo": "GPT-4 Turbo - Latest ($10/1M) (openai/gpt-4-turbo)",
                         "o1": "O1 - Most capable ($15/1M) (openai/o1)",
                         "claude-3-sonnet": "Claude 3.5 Sonnet - Balanced ($3/M) (anthropic/claude-3-sonnet)",
-                        "claude-3-opus": "Claude 3.5 Opus - Most capable ($15/M) (anthropic/claude-3-opus)",
                         "auto": "Auto - Best available model (openrouter/auto)"
                     }
                 };
@@ -801,4 +799,4 @@
         }
     </script>
 </body>
-</html> 
+</html>
